Fixing video modal layout on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -341,21 +341,26 @@ html, body {
       align-content: center;
 }
 
+.videoContainer > div {
+  position: relative;
+  margin: auto;
+  width: 90%;
+  height: 90%;
+}
+
 .vimeoVideo {
-  width: 1920px;
-  height: 1080px;
-  max-width: 90%;
-  max-height: 90%;
+  width: 100%;
+  height: 100%;
   border: 0;
   margin: auto;
 }
 
 .closeVideoModalButton {
+  position: absolute;
+  right: 0;
+  top: -22px;
   color: white;
-  margin: auto;
   cursor: pointer;
-  text-align: right;
-  width: 90%;
 }
 
 .closeVideoModalButton:hover {
